--- a/aws-cicd/pom.xml
+++ b/aws-cicd/pom.xml
@@ -8,36 +8,32 @@
 		<version>2.2.5.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.metoojava</groupId>
-	<artifactId>Greetings</artifactId>
+	<groupId>com.rs.aws</groupId>
+	<artifactId>aws-cicd</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Greetings</name>
-	<description>Demo project for Spring Boot</description>
 	<packaging>war</packaging>
+	<name>aws-cicd</name>
+	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>1.8</java.version>
-		<resilience4j.version>1.3.0</resilience4j.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
+
 		<dependency>
-			<groupId>javax.ws.rs</groupId>
-			<artifactId>javax.ws.rs-api</artifactId>
-			<version>2.0</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
 		</dependency>
-
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -49,15 +45,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
 		<!--Additional Dependencies-->
 		<dependency>
 			<groupId>io.github.resilience4j</groupId>
 			<artifactId>resilience4j-prometheus</artifactId>
-			<version>${resilience4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>1.3.0</version>
 		</dependency>
 	</dependencies>
 
@@ -67,10 +60,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<executions>
-					<execution>
+					<!--<execution>
 						<id>default-war</id>
 						<phase>none</phase>
-					</execution>
+					</execution>-->
 					<execution>
 						<id>war-exploded</id>
 						<configuration>
